client/css/game.css
/* ... */
.coinIcon {
	width: 20px;
	height: 20px;
}
.cashIcon {
	width: 20px;
	height: 20px;
}
#coinbar {
	display: table;
}
#coinbar * {
	float: left;
	display: table-cell;
}
.coinbarProgress {
	margin: 3px;
	min-width: 40px;
	max-height: 19px;
	border: none !important;
}
.waterIcon {
	width: 20px;
	height: 20px;
}
#waterbar {
	display: table;
}
#waterbar * {
	float: left;
	display: table-cell;
}
.waterbarProgress {
	margin: 3px;
	min-width: 40px;
	max-height: 19px;
	border: none !important;
}
.goalTaskImage {
	display: inline-block;
	width: 100px;
	min-width: 100px;
	min-height: 40px;
	background-repeat: no-repeat;
	background-size: 100%;
}
.goalTaskTitle {
	display: inline-block;
	min-width: 100px;
}
.goalTaskPercent {
	display: inline-block;
	text-align: right;
	min-width: 30px;
	float: right;
	margin:0px;
}
#taskList {
	display: block;
	list-style-type: none;
	margin: 0;
	padding: 0;
}
#taskList li {
	display: block;
	margin: 0px 5px 0px 5px;
}
#taskList li span {
	display: inline-block;
	min-width: 60px;
	min-height: 40px;
	margin-top: 5px;
	vertical-align: middle;
}
#goalDialog {
	padding: 0px;
	margin: 0px;
	min-width: 400px;
}
#goalDialogContent {
	margin: 0px;
	padding: 0px;
}
.notifyIconWrapper {
	position: fixed;
	background-color: rgba(255, 255, 255, .7);
}
.notifyIcon {
	position: absolute;
	width: 20px;
	height: 20px;
	background-color: rgba(255, 255, 255, .7);
	opacity: 1.0;
	padding: 3px;
	border-radius: 3px;
}
.locked {
	background: #dddddd;
}
.unlock {
	margin: 0;
	height: 100%;
	padding-left: 3px;
	padding-right: 3px;
	min-height: 25px;
	max-height: 30px;
	min-width: 25px;
	opacity: .9;
	border: 2px solid white;
	display: inline-block;
	cursor: pointer;
	background-image: url('/client/assets/textures/ui/beigefade.png');
	background-repeat: no-repeat;
	background-size: 100% 100%;
	border-radius: 5px;
	overflow-y: hidden;
}
.iconcell {
	width: 100px;
	overflow-x: hidden;
}
.unlock img {
	width: 25px;
	height: 25px;
	white-space: nowrap;
}
.unlock:hover {
	opacity: 1.0;
}
#marketDialog {
	min-width: 400px;
	min-height: 300px;
	height: 100%;
	padding: 0;
	/* position: absolute; */
	background-color: white;
}
#marketDialog ul {
	overflow-y: auto;
	overflow-x: hidden;
}
.marketDialogItem {
	max-height: 40px;
	min-height: 25px;
	display: block;
	padding: 0px;
}
.marketDialogItem:hover {
	background-color: #97C9FD
}

.marketDialogItem span {
	max-height: 40px;
	min-height: 25px;
	vertical-align: middle;
	display: inline-block;
	margin-top: 3px;
	margin-bottom: 3px;
	height: 100%;
}
.marketDialogList {
	list-style-type: none;
	margin: 0;
	padding: 0;
}
.marketDialogList table tr td {
	padding: 0;
	margin: 0;
}
.marketDialogList table {
	table-layout: fixed;
	width: 600px;
}
.marketItemImage {
	background-repeat: no-repeat;
	background-position: 0px -200px;
	min-width: 30px;
	height: 30px;
	display: inline-block;
	overflow-x: hidden;
}
.marketItemImage img {
	position: absolute;
	height: 30px;
}
.marketItemTitle {
	width: 200px;
}
.marketDialogPage {
	margin: 0;
	padding: 0;
}
.marketItemCoins {
	text-align: center;
}
.marketItemCash {
}
.marketCoinIcon {
	width: 20px;
	height: 20px;
}
.marketCashIcon {
	width: 20px;
	height: 20px;
}
.marketItemCover {
	text-align: center;
	width: 100%;
	height: 100%;
}
.marketItemInfo {
	cursor: pointer;
	text-align: center;
	width: 59px;
}
.marketItemInfoIcon{
	width: 30px;
	height: 30px;
}
#marketDialogPagination {
	margin: auto;
	min-width: 200px;
	max-width: 300px;
}
.newGoalNotification {
	margin: 3px;
	min-width: 40px;
	vertical-align: middle;
	text-align: center;
}

#topToolbarTutorial {
	max-height: 35px;
	list-style: none;
	padding: 0;
	margin: auto;
}
#topToolbarTutorial li {
	opacity: .9;
	border: 2px solid white;
	background-color: white;
	display: inline-block;
	margin-left: 10px;
	padding: 0px;
	cursor: pointer;
	border-radius: 5px;
	box-shadow: 2px 2px 5px #000;
}
#topToolbarTutorial li:hover {
	opacity: 1;
}
#topToolbarTutorial > li:last-child {
	float: right;
}
#topToolbarTutorial img {
	display: block;
	background-image: url('/client/assets/textures/ui/beigefade.png');
	background-repeat: no-repeat;
	background-size: 100% 100%;
	border: 2px solid #99ccff;
	border-radius: 5px;
	width: 25px;
	height: 25px;
}
#goalButtonTutorial {
	display: table;
}
#goalButtonTutorial * {
	float: left;
	display: table-cell;
}
#cashbarTutorial {
	display: table;
}
#cashbarTutorial * {
	float: left;
	display: table-cell;
}
#coinbarTutorial {
	display: table;
}
#coinbarTutorial * {
	float: left;
	display: table-cell;
}
#waterbarTutorial {
	display: table;
}
#waterbarTutorial * {
	float: left;
	display: table-cell;
}
.tutorialMarketDialogItem {
	height: 50px;
	position: relative;
}
.tutorialMarketImage {
	position: absolute;
	height: 50px;
}
#tutorialContent {
	text-align: center;
}
#tutorialContent ul{
	list-style: none;
	padding: 0;
}
#tutorialArrowSpan {
	position: fixed;
	width: 31px;
	height: 33px;
	z-index: 1000;
}
#tutorialArrowImage {
	position: relative;
}
#skipTutorial {
	position: absolute;
	cursor: pointer;
}
.disabled {
	cursor: default;
	opacity: .5;
}
.allPointerEvents {
	pointer-events: all;
}
.nonePointerEvents {
	pointer-events: none;
}
#notificationMessage {
	position: fixed;
	font-family: 'Press Start 2P', cursive;
	font-size: 16px;
	color: white;
	top: 0px;
	left: 10px;
	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}
#editorContent {
	text-align: center;
}
#savingContent {
	text-align: center;
}
#villageTitle {
	display: none;
	text-align: center;
	font-family: 'Press Start 2P', cursive;
	font-size: 20px;
	color: white;
	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}
#objectDescription {
	display: none;
	text-align: center;
	font-family: 'Press Start 2P', cursive;
	font-size: 20px;
	color: white;
	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
}
/* ... */

